fixing spacing between sidebar

--- a/src/index.css
+++ b/src/index.css
@@ -4,11 +4,12 @@
 
 @layer utilities {
     .sidebar-extended {
-        width: 170px; 
+        width: 180px; 
         transition: width 0.5s ease-in-out;
         background-color: rgba(0, 0, 0,0.2);
         color: white;
         z-index: 20;
+
       }
       
       .sidebar-collapsed {
